fixed wave on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -79,7 +79,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 58vh;
+    height: 50vh;
     z-index: -100;
     animation-name: wave;
     animation-duration: 5s;
@@ -255,7 +255,7 @@
     background: url('/img/robbo.jpg');
     background-size: cover;
     background-position: right;
-    height: 45vh;
+    height: 40vh;
     margin-left: 5vw;
     margin-right: 5vw;
     background-repeat: no-repeat;
